--- a/docs/android/index.yml
+++ b/docs/android/index.yml
@@ -7,11 +7,11 @@ metadata:
   ms.author: crdun
   ms.date: 02/17/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 95b576880adef44c3a3c4b601d7ce04498d351da
-  ms.sourcegitcommit: 6cd40d190abe38edd50fc74331be15324a845a28
+  ms.openlocfilehash: 708dbb752e4ba2e5d5ca6dc16b2a48af72f7632b
+  ms.sourcegitcommit: 8e722d72c5d1384889f70adb26c5675544897b1f
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 02/27/2018
+  ms.lasthandoff: 03/15/2018
 abstract:
   description: "Rozszerzenie Xamarin.Android uwidacznia kompletny zestaw Android SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemu Android przy użyciu języka C# lub F# w programie Visual Studio."
   menu:
@@ -107,8 +107,11 @@ sections:
     className: cardsD
     items:
     - title: interfejs API
-      html: <p><a href="https://developer.xamarin.com/api/root/monodroi-lib/">Dokumentacja interfejsu API systemu Android</a></p><p><a href="https://docs.microsoft.com/en-us/dotnet/api/?view=xamarinandroid-7.1">Biblioteka klas bazowych</a></p>
+      href: https://developer.xamarin.com/api/root/MonoAndroid-lib/
+      html: <p><a href="https://developer.xamarin.com/api/root/MonoAndroid-lib/">Dokumentacja interfejsu API systemu Android</a></p><p><a href="https://docs.microsoft.com/en-us/dotnet/api/?view=xamarinandroid-7.1">Biblioteka klas bazowych</a></p>
     - title: "Przykłady"
+      href: https://developer.xamarin.com/samples/android/all/
       html: "<p><a href=\"https://developer.xamarin.com/samples/android/all/\">Przykłady dla systemu Android</a></p>"
     - title: Skoroszyty
+      href: https://developer.xamarin.com/workbooks#android
       html: <p><a href="https://developer.xamarin.com/workbooks#android">Skoroszyty systemu Android</a></p>
