--- a/docs/cross-platform/index.yml
+++ b/docs/cross-platform/index.yml
@@ -1,23 +1,23 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Wskazówki dotyczące aplikacji międzyplatformowych"
+title: Wskazówki dotyczące aplikacji międzyplatformowych
 metadata:
-  description: "Wskazówki dotyczące aplikacji międzyplatformowych dla deweloperów rozwiązań na urządzenia przenośne."
+  description: Wskazówki dotyczące aplikacji międzyplatformowych dla deweloperów rozwiązań na urządzenia przenośne.
   author: conceptdev
   ms.author: crdun
-  ms.date: 02/17/2018
+  ms.date: 03/28/2018
   ms.topic: landing-page
-  ms.openlocfilehash: c143d0be4eb0a8afa122028018ab7c8c4e20a32a
-  ms.sourcegitcommit: 30055c534d9caf5dffcfdeafd6f08e666fb870a8
+  ms.openlocfilehash: 92873a844fad195d221f6d191476cb5ff17c76e9
+  ms.sourcegitcommit: 4f1b508caa8e7b6ccf85d167ea700a5d28b0347e
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 03/09/2018
+  ms.lasthandoff: 04/03/2018
 abstract:
-  description: "Środowisko Xamarin zapewnia platformę na potrzeby opracowywania aplikacji międzyplatformowych dla urządzeń przenośnych, tabletów i komputerów stacjonarnych."
+  description: Środowisko Xamarin zapewnia platformę na potrzeby opracowywania aplikacji międzyplatformowych dla urządzeń przenośnych, tabletów i komputerów stacjonarnych.
   menu:
     items:
     - href: ~/cross-platform/samples/
-      text: "Przykłady środowiska Xamarin"
+      text: Przykłady środowiska Xamarin
     - href: /visualstudio/
       text: Visual Studio
     - href: /visualstudio/mac/
@@ -26,22 +26,22 @@ sections:
 - title: Rozpocznij
   items:
   - type: paragraph
-    text: "Dowiedz się, jak opracować swoje pierwsze aplikacje za pomocą środowiska Xamarin i języka C# dla systemów Android, iOS, macOS i platformy UWP i nie tylko."
+    text: Dowiedz się, jak opracować swoje pierwsze aplikacje za pomocą środowiska Xamarin i języka C# dla systemów Android, iOS, macOS i platformy UWP i nie tylko.
   - type: list
     style: icon48
     items:
     - image:
         src: https://docs.microsoft.com/media/common/i_setup.svg
       text: Wymagania
-      href: ~/cross-platform/get-started/index.md
+      href: ~/cross-platform/get-started/requirements.md
     - image:
         src: https://docs.microsoft.com/media/common/i_mobileapp.svg
       text: Wprowadzenie
-      href: ~/cross-platform/get-started/index.md
+      href: ~/xamarin-forms/get-started/hello-xamarin-forms/quickstart.md
     - image:
         src: https://docs.microsoft.com/media/common/i_mobileapp.svg
       text: Aplikacje z wieloma ekranami
-      href: ~/cross-platform/index.md
+      href: ~/xamarin-forms/get-started/hello-xamarin-forms-multiscreen/quickstart.md
 - title: Przewodniki
   items:
   - type: grid
@@ -53,7 +53,7 @@ sections:
       className: cardsB
       items:
       - href: ~/cross-platform/get-started/index.md
-        html: "Samouczki pomagające w rozpoczęciu pracy ze środowiskiem Xamarin. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz swoje pierwsze aplikacje."
+        html: Samouczki pomagające w rozpoczęciu pracy ze środowiskiem Xamarin. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz swoje pierwsze aplikacje.
         image:
           src: https://docs.microsoft.com/en-us/media/common/i_get-started.svg
           href: ~/cross-platform/get-started/index.md
@@ -64,14 +64,8 @@ sections:
           src: ~/media/icons/i_platform.svg
           href: ~/
         title: Funkcje platformy
-      - href: ~/cross-platform/data-cloud/
-        html: "Magazynowanie i pobieranie danych lokalnych i zdalnych oraz inne usługi chmurowe."
-        image:
-          src: ~/media/icons/i_data-cloud.svg
-          href: ~/cross-platform/data-cloud/
-        title: "Usługi danych i usługi w chmurze"
       - href: ~/cross-platform/macios/
-        html: "Często używane funkcje zestawów SDK systemów iOS, watchOS, tvOS i macOS."
+        html: Często używane funkcje zestawów SDK systemów iOS, watchOS, tvOS i macOS.
         image:
           src: https://docs.microsoft.com/media/logos/logo_xcode.svg
           href: ~/cross-platform/macios/
@@ -81,23 +75,17 @@ sections:
       className: cardsB
       items:
       - href: ~/cross-platform/app-fundamentals/
-        html: "Wszystko, co musisz wiedzieć, aby tworzyć aplikacje."
+        html: Wszystko, co musisz wiedzieć, aby tworzyć aplikacje.
         image:
           src: ~/media/icons/i_app-build.svg
           href: ~/cross-platform/app-fundamentals/
         title: Podstawy aplikacji
       - href: ~/cross-platform/deploy-test/
-        html: "Instrukcje dotyczące tworzenia i wdrażania aplikacji oraz porady na temat ich wcześniejszego testowania."
+        html: Instrukcje dotyczące tworzenia i wdrażania aplikacji oraz porady na temat ich wcześniejszego testowania.
         image:
           src: ~/media/icons/i_deploy-test.svg
           href: ~/cross-platform/deploy-test/
-        title: "Wdrażanie i testowanie"
-      - href: ~/cross-platform/internals/
-        html: "Dodatkowe informacje o tworzeniu aplikacji międzyplatformowych na urządzenia przenośne, tablety i komputery stacjonarne."
-        image:
-          src: https://docs.microsoft.com/en-us/media/common/i_advanced.svg
-          href: ~/cross-platform/internals/
-        title: "Pojęcia zaawansowane i elementy wewnętrzne"
+        title: Wdrażanie i testowanie
 - title: Platformy
   items:
   - type: list
@@ -106,13 +94,13 @@ sections:
     items:
     - title: Xamarin.Forms
       href: ~/xamarin-forms/index.md
-      html: "<p><a href=\"~/xamarin-forms/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/xamarin-forms/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/xamarin-forms/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/xamarin-forms/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/xamarin-forms/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/xamarin-forms/xaml/index.md\">XAML</a><br /><a href=\"~/xamarin-forms/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/xamarin-forms/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/xamarin-forms/get-started/index.md">Wprowadzenie</a><br /><a href="~/xamarin-forms/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/xamarin-forms/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/xamarin-forms/platform/index.md">Funkcje platformy</a><br /><a href="~/xamarin-forms/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/xamarin-forms/xaml/index.md">XAML</a><br /><a href="~/xamarin-forms/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/xamarin-forms/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Android
       href: ~/android/index.md
-      html: "<p><a href=\"~/android/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/android/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/android/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/android/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/android/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/android/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/android/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/android/get-started/index.md">Wprowadzenie</a><br /><a href="~/android/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/android/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/android/platform/index.md">Funkcje platformy</a><br /><a href="~/android/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/android/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/android/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: iOS
       href: ~/ios/index.md
-      html: "<p><a href=\"~/ios/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/ios/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/ios/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/ios/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/ios/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/ios/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/ios/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/ios/get-started/index.md">Wprowadzenie</a><br /><a href="~/ios/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/ios/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/ios/platform/index.md">Funkcje platformy</a><br /><a href="~/ios/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/ios/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/ios/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Mac
       href: ~/mac/index.md
-      html: "<p><a href=\"~/mac/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/mac/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/mac/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/mac/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/mac/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/mac/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/mac/get-started/index.md">Wprowadzenie</a><br /><a href="~/mac/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/mac/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/mac/platform/index.md">Funkcje platformy</a><br /><a href="~/mac/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/mac/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
