--- a/docs/xamarin-forms/index.yml
+++ b/docs/xamarin-forms/index.yml
@@ -2,35 +2,35 @@
 documentType: LandingData
 title: Xamarin.Forms
 metadata:
-  description: "Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET umożliwiający tworzenie aplikacji dla urządzeń przenośnych, tabletów i komputerów."
+  description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET umożliwiający tworzenie aplikacji dla urządzeń przenośnych, tabletów i komputerów.
   author: conceptdev
   ms.author: crdun
   ms.date: 02/17/2018
   ms.topic: landing-page
-  ms.openlocfilehash: ff86846ded6ca9dffce616a4e0e3415b58fc20da
-  ms.sourcegitcommit: 6cd40d190abe38edd50fc74331be15324a845a28
+  ms.openlocfilehash: ae192b3f07c4d6c180644871e48b6bc749a633c2
+  ms.sourcegitcommit: 4f1b508caa8e7b6ccf85d167ea700a5d28b0347e
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 02/27/2018
+  ms.lasthandoff: 04/03/2018
 abstract:
-  description: "Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemów Android, iOS i Windows przy użyciu języka C# w programie Visual Studio."
+  description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemów Android, iOS i Windows przy użyciu języka C# w programie Visual Studio.
   menu:
     items:
     - href: ~/xamarin-forms/samples/
-      text: "Przykłady zestawu narzędzi Xamarin.Forms"
+      text: Przykłady zestawu narzędzi Xamarin.Forms
     - href: https://developer.xamarin.com/releases/xamarin-forms/
       text: Uwagi do wersji
     - href: https://developers.google.com/
-      text: "Dokumentacja dla deweloperów od firmy Google"
+      text: Dokumentacja dla deweloperów od firmy Google
     - href: https://developer.apple.com/documentation/
-      text: "Dokumentacja dla deweloperów od firmy Apple"
+      text: Dokumentacja dla deweloperów od firmy Apple
     - href: /visualstudio/
       text: Visual Studio
 sections:
 - title: Rozpocznij
   items:
   - type: paragraph
-    text: "Dowiedz się, jak utworzyć pierwszą aplikację Xamarin.Forms dla systemów Android, iOS i Windows, korzystając ze środowiska Xamarin i języka C#."
+    text: Dowiedz się, jak utworzyć pierwszą aplikację Xamarin.Forms dla systemów Android, iOS i Windows, korzystając ze środowiska Xamarin i języka C#.
   - type: list
     style: icon48
     items:
@@ -40,7 +40,7 @@ sections:
       href: ~/xamarin-forms/get-started/installation.md
     - image:
         src: https://docs.microsoft.com/media/common/i_mobileapp.svg
-      text: Witaj, Xamarin.Forms
+      text: Szybki start
       href: ~/xamarin-forms/get-started/hello-xamarin-forms/quickstart.md
     - image:
         src: https://docs.microsoft.com/media/common/i_mobileapp.svg
@@ -57,57 +57,57 @@ sections:
       className: cardsB
       items:
       - href: ~/xamarin-forms/get-started/index.md
-        html: "Samouczki pomagające w rozpoczęciu pracy z zestawem narzędzi Xamarin.Forms. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz pierwsze aplikacje Xamarin.Forms."
+        html: Samouczki pomagające w rozpoczęciu pracy z zestawem narzędzi Xamarin.Forms. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz pierwsze aplikacje Xamarin.Forms.
         image:
           src: https://docs.microsoft.com/en-us/media/common/i_get-started.svg
           href: ~/xamarin-forms/get-started/index.md
         title: Wprowadzenie
       - href: ~/xamarin-forms/user-interface
-        html: "Więcej informacji na temat pełnego zestawu kontrolek interfejsu użytkownika dostępnych w języku XAML zestawu narzędzi Xamarin.Forms."
+        html: Więcej informacji na temat pełnego zestawu kontrolek interfejsu użytkownika dostępnych w języku XAML zestawu narzędzi Xamarin.Forms.
         image:
           src: ~/media/icons/i_user-interface.svg
           href: ~/xamarin-forms/user-interface/
-        title: "Interfejs użytkownika"
+        title: Interfejs użytkownika
       - href: ~/xamarin-forms/deploy-test/
-        html: "Instrukcje dotyczące tworzenia i wdrażania aplikacji oraz porady na temat ich wcześniejszego testowania."
+        html: Instrukcje dotyczące tworzenia i wdrażania aplikacji oraz porady na temat ich wcześniejszego testowania.
         image:
           src: ~/media/icons/i_deploy-test.svg
           href: ~/xamarin-forms/deploy-test/
-        title: "Wdrażanie i testowanie"
+        title: Wdrażanie i testowanie
       - href: ~/xamarin-forms/data-cloud/
-        html: "Magazynowanie i pobieranie danych lokalnych i zdalnych oraz inne usługi chmurowe."
+        html: Magazynowanie i pobieranie danych lokalnych i zdalnych oraz inne usługi chmurowe.
         image:
           src: ~/media/icons/i_data-cloud.svg
           href: ~/xamarin-forms/data-cloud/
-        title: "Usługi danych i usługi w chmurze"
+        title: Usługi danych i usługi w chmurze
     - type: list
       style: cards
       className: cardsB
       items:
       - href: ~/xamarin-forms/app-fundamentals/
-        html: "Wszystko, co musisz wiedzieć, aby tworzyć aplikacje Xamarin.Forms, np. informacje o pracy z plikami, obrazami, bazami danych itp."
+        html: Wszystko, co musisz wiedzieć, aby tworzyć aplikacje Xamarin.Forms, np. informacje o pracy z plikami, obrazami, bazami danych itp.
         image:
           src: ~/media/icons/i_app-build.svg
           href: ~/xamarin-forms/app-fundamentals/
         title: Podstawy aplikacji
       - href: ~/
-        html: "Praca z funkcjami platformy Xamarin.Forms, takimi jak niestandardowe programy renderujące, oraz innymi ważnymi funkcjami każdej wersji."
+        html: Praca z funkcjami platformy Xamarin.Forms, takimi jak niestandardowe programy renderujące, oraz innymi ważnymi funkcjami każdej wersji.
         image:
           src: ~/media/icons/i_platform.svg
           href: ~/
         title: Funkcje platformy
       - href: ~/xamarin-forms/xaml/
-        html: "Deklaratywne tworzenie interfejsów użytkownika i współdzielenie ich na platformach mobilnych i klasycznych."
+        html: Deklaratywne tworzenie interfejsów użytkownika i współdzielenie ich na platformach mobilnych i klasycznych.
         image:
           src: ~/media/icons/i_xaml-forms.svg
           href: ~/xamarin-forms/xaml/
         title: XAML
       - href: ~/xamarin-forms/internals/
-        html: "Dodatkowe informacje o elementach wewnętrznych zestawu narzędzi Xamarin.Forms oraz pomoc z funkcjami takimi jak lokalizacja i ułatwienia dostępu."
+        html: Dodatkowe informacje o elementach wewnętrznych zestawu narzędzi Xamarin.Forms oraz pomoc z funkcjami takimi jak lokalizacja i ułatwienia dostępu.
         image:
           src: https://docs.microsoft.com/en-us/media/common/i_config-tools.svg
           href: ~/xamarin-forms/internals/
-        title: "Pojęcia zaawansowane i elementy wewnętrzne"
+        title: Pojęcia zaawansowane i elementy wewnętrzne
 - title: Tematy pomocy
   items:
   - type: list
@@ -115,10 +115,10 @@ sections:
     className: cardsD
     items:
     - title: interfejs API
-      html: "<p><a href=\"https://developer.xamarin.com/api/root/Xamarin.Forms/\">Dokumentacja interfejsów API zestawu narzędzi Xamarin.Forms</a></p>"
-    - title: "Przykłady"
-      html: "<p><a href=\"https://developer.xamarin.com/samples/xamarin-forms/all/\">Przykłady zestawu narzędzi Xamarin.Forms</a></p>"
+      html: <p><a href="https://developer.xamarin.com/api/root/Xamarin.Forms/">Dokumentacja interfejsów API zestawu narzędzi Xamarin.Forms</a></p>
+    - title: Przykłady
+      html: <p><a href="https://developer.xamarin.com/samples/xamarin-forms/all/">Przykłady zestawu narzędzi Xamarin.Forms</a></p>
     - title: Skoroszyty
-      html: "<p><a href=\"https://developer.xamarin.com/workbooks#xamarin-forms\">Skoroszyty dla zestawu narzędzi Xamarin.Forms</a></p>"
-    - title: "Książki"
-      html: "<p><a href=\"~/xamarin-forms/creating-mobile-apps-xamarin-forms\">Tworzenie aplikacji mobilnych — książka elektroniczna</a></p><p><a href=\"~/xamarin-forms/enterprise-application-patterns\">Wzorce aplikacji dla przedsiębiorstw — książka elektroniczna</a></p>"
+      html: <p><a href="https://developer.xamarin.com/workbooks#xamarin-forms">Skoroszyty dla zestawu narzędzi Xamarin.Forms</a></p>
+    - title: Książki
+      html: <p><a href="~/xamarin-forms/creating-mobile-apps-xamarin-forms">Tworzenie aplikacji mobilnych — książka elektroniczna</a></p><p><a href="~/xamarin-forms/enterprise-application-patterns">Wzorce aplikacji dla przedsiębiorstw — książka elektroniczna</a></p>
