--- a/docs/mac/index.yml
+++ b/docs/mac/index.yml
@@ -2,33 +2,33 @@
 documentType: LandingData
 title: Xamarin.Mac
 metadata:
-  description: "Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET."
+  description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET.
   author: conceptdev
   ms.author: crdun
-  ms.date: 02/17/2018
+  ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: a81c5b6fe71f178f2def0e6bbacac56db229a39a
-  ms.sourcegitcommit: 6cd40d190abe38edd50fc74331be15324a845a28
+  ms.openlocfilehash: 0dc1a27fa1cb99d3a2941d1ec838ce03ac301e1e
+  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 02/27/2018
+  ms.lasthandoff: 04/26/2018
 abstract:
-  description: "Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje w programie Visual Studio dla komputerów Mac."
+  description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje w programie Visual Studio dla komputerów Mac.
   menu:
     items:
     - href: ~/mac/samples/
-      text: "Przykłady dla komputerów Mac"
+      text: Przykłady dla komputerów Mac
     - href: https://developer.xamarin.com/releases/mac/
       text: Uwagi do wersji
     - href: https://developer.apple.com/documentation/
-      text: "Dokumentacja dla deweloperów od firmy Apple"
+      text: Dokumentacja dla deweloperów od firmy Apple
     - href: /visualstudio/mac/
       text: Visual Studio for Mac
 sections:
 - title: Rozpocznij
   items:
   - type: paragraph
-    text: "Dowiedz się, jak utworzyć pierwszą aplikację na komputer Mac, korzystając ze środowiska Xamarin i języka C#."
+    text: Dowiedz się, jak utworzyć pierwszą aplikację na komputer Mac, korzystając ze środowiska Xamarin i języka C#.
   - type: list
     style: icon48
     items:
@@ -42,54 +42,46 @@ sections:
       href: ~/mac/get-started/hello-mac.md
 - title: Przewodniki
   items:
-  - type: grid
-    style: columns
-    className: column50
+  - type: list
+    style: cards
+    className: cardsB
     items:
-    - type: list
-      style: cards
-      className: cardsB
-      items:
-      - href: ~/mac/get-started/index.md
-        html: "Samouczki pomagające w rozpoczęciu pracy z rozszerzeniem Xamarin.Mac. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz pierwsze aplikacje dla komputerów Mac."
-        image:
-          src: https://docs.microsoft.com/en-us/media/common/i_get-started.svg
-          href: ~/mac/get-started/index.md
-        title: Wprowadzenie
-      - href: ~/mac/user-interface
-        html: "Więcej informacji na temat pełnego zestawu kontrolek interfejsu użytkownika dostępnych dla systemu macOS w strukturze AppKit."
-        image:
-          src: ~/media/icons/i_user-interface.svg
-          href: ~/mac/user-interface/
-        title: "Interfejs użytkownika"
-      - href: ~/mac/deploy-test/
-        html: "Instrukcje dotyczące tworzenia i wdrażania aplikacji w sklepie App Store oraz porady na temat ich wcześniejszego testowania."
-        image:
-          src: ~/media/icons/i_deploy-test.svg
-          href: ~/mac/deploy-test/
-        title: "Wdrażanie i testowanie"
-    - type: list
-      style: cards
-      className: cardsB
-      items:
-      - href: ~/mac/app-fundamentals/
-        html: "Wszystko, co musisz wiedzieć, aby tworzyć aplikacje na komputery Mac, np. informacje o pracy z plikami, obrazami, bazami danych itp."
-        image:
-          src: ~/media/icons/i_app-build.svg
-          href: ~/mac/app-fundamentals/
-        title: Podstawy aplikacji
-      - href: ~/mac/platform/
-        html: Praca z funkcjami platformy Mac, takimi jak scenorysy i OpenTK, oraz najnowszymi funkcjami systemu macOS.
-        image:
-          src: ~/media/icons/i_platform.svg
-          href: ~/mac/platform/
-        title: Funkcje platformy
-      - href: ~/mac/internals/
-        html: "Dodatkowe informacje o elementach wewnętrznych rozszerzenia Xamarin.Mac oraz pomoc z funkcjami takimi jak ułatwienia dostępu."
-        image:
-          src: https://docs.microsoft.com/en-us/media/common/i_config-tools.svg
-          href: ~/mac/internals/
-        title: "Pojęcia zaawansowane i elementy wewnętrzne"
+    - href: ~/mac/get-started/index.md
+      html: Samouczki pomagające w rozpoczęciu pracy z rozszerzeniem Xamarin.Mac. Upewnij się, że wszystko jest poprawnie zainstalowane, i utwórz pierwsze aplikacje dla komputerów Mac.
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_get-started.svg
+        href: ~/mac/get-started/index.md
+      title: Wprowadzenie
+    - href: ~/mac/app-fundamentals/
+      html: Wszystko, co musisz wiedzieć, aby tworzyć aplikacje na komputery Mac, np. informacje o pracy z plikami, obrazami, bazami danych itp.
+      image:
+        src: ~/media/icons/i_app-build.svg
+        href: ~/mac/app-fundamentals/
+      title: Podstawy aplikacji
+    - href: ~/mac/user-interface
+      html: Więcej informacji na temat pełnego zestawu kontrolek interfejsu użytkownika dostępnych dla systemu macOS w strukturze AppKit.
+      image:
+        src: ~/media/icons/i_user-interface.svg
+        href: ~/mac/user-interface/
+      title: Interfejs użytkownika
+    - href: ~/mac/platform/
+      html: Praca z funkcjami platformy Mac, takimi jak scenorysy i OpenTK, oraz najnowszymi funkcjami systemu macOS.
+      image:
+        src: ~/media/icons/i_platform.svg
+        href: ~/mac/platform/
+      title: Funkcje platformy
+    - href: ~/mac/deploy-test/
+      html: Instrukcje dotyczące tworzenia i wdrażania aplikacji w sklepie App Store oraz porady na temat ich wcześniejszego testowania.
+      image:
+        src: ~/media/icons/i_deploy-test.svg
+        href: ~/mac/deploy-test/
+      title: Wdrażanie i testowanie
+    - href: ~/mac/internals/
+      html: Dodatkowe informacje o elementach wewnętrznych rozszerzenia Xamarin.Mac oraz pomoc z funkcjami takimi jak ułatwienia dostępu.
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_config-tools.svg
+        href: ~/mac/internals/
+      title: Pojęcia zaawansowane i elementy wewnętrzne
 - title: Tematy pomocy
   items:
   - type: list
@@ -97,8 +89,8 @@ sections:
     className: cardsD
     items:
     - title: interfejs API
-      html: "<p><a href=\"https://developer.xamarin.com/api/root/monomac-lib/\">Dokumentacja interfejsów API komputera Mac</a></p><p><a href=\"https://docs.microsoft.com/en-us/dotnet/api/?view=xamarinmac-3.0\">Biblioteka klas bazowych</a></p>"
-    - title: "Przykłady"
-      html: "<p><a href=\"https://developer.xamarin.com/samples/mac/all/\">Przykłady dla komputerów Mac</a></p>"
+      html: <p><a href="https://developer.xamarin.com/api/root/monomac-lib/">Dokumentacja interfejsów API komputera Mac</a></p><p><a href="https://docs.microsoft.com/en-us/dotnet/api/?view=xamarinmac-3.0">Biblioteka klas bazowych</a></p>
+    - title: Przykłady
+      html: <p><a href="https://developer.xamarin.com/samples/mac/all/">Przykłady dla komputerów Mac</a></p>
     - title: Skoroszyty
-      html: "<p><a href=\"https://developer.xamarin.com/workbooks#mac\">Skoroszyty dla komputerów Mac</a></p>"
+      html: <p><a href="https://developer.xamarin.com/workbooks#mac">Skoroszyty dla komputerów Mac</a></p>
