--- a/docs/xamarin-forms/index.yml
+++ b/docs/xamarin-forms/index.yml
@@ -7,13 +7,13 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: cf57fed4ab3e7036176e2c430226f5e2f5a34536
-  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
+  ms.openlocfilehash: 20178c7ff96dbdd7353d92f454f3231ad89ba3eb
+  ms.sourcegitcommit: 1561c8022c3585655229a869d9ef3510bf83f00a
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/26/2018
+  ms.lasthandoff: 04/27/2018
 abstract:
-  description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemów Android, iOS i Windows przy użyciu języka C# w programie Visual Studio.
+  description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Kompiluj całkowicie natywne aplikacje dla systemów Android, iOS i platformy uniwersalnej systemu Windows przy użyciu języka C# w programie Visual Studio.
   menu:
     items:
     - href: ~/xamarin-forms/samples/
@@ -30,7 +30,7 @@ sections:
 - title: Rozpocznij
   items:
   - type: paragraph
-    text: Dowiedz się, jak utworzyć pierwszą aplikację Xamarin.Forms dla systemów Android, iOS i Windows, korzystając ze środowiska Xamarin i języka C#.
+    text: Dowiedz się, jak skompilować pierwszą aplikację Xamarin.Forms dla systemów Android, iOS i platformy uniwersalnej systemu Windows, korzystając ze środowiska Xamarin i języka C#.
   - type: list
     style: icon48
     items:
