--- a/docs/ios/index.yml
+++ b/docs/ios/index.yml
@@ -7,16 +7,16 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 3087767c250cd270b663d73ef680db391df86e15
-  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
+  ms.openlocfilehash: 9f60abbaa0787514766e566b6406a192d378a8a8
+  ms.sourcegitcommit: 4b0582a0f06598f3ff8ad5b817946459fed3c42a
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/26/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
   description: Rozszerzenie Xamarin.iOS uwidacznia kompletny zestaw iOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemu iOS przy użyciu języka C# lub F# w programie Visual Studio.
   menu:
     items:
-    - href: ~/ios/samples/
+    - href: ~/ios/samples/index.yml
       text: Przykłady dla systemu iOS
     - href: https://developer.xamarin.com/releases/ios/
       text: Uwagi do wersji
