--- a/docs/mac/index.yml
+++ b/docs/mac/index.yml
@@ -7,16 +7,16 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 0dc1a27fa1cb99d3a2941d1ec838ce03ac301e1e
-  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
+  ms.openlocfilehash: 7cbc1015f15838d67b0a496e9eeffd89a276b003
+  ms.sourcegitcommit: 4b0582a0f06598f3ff8ad5b817946459fed3c42a
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/26/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
   description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje w programie Visual Studio dla komputerów Mac.
   menu:
     items:
-    - href: ~/mac/samples/
+    - href: ~/mac/samples/index.yml
       text: Przykłady dla komputerów Mac
     - href: https://developer.xamarin.com/releases/mac/
       text: Uwagi do wersji
