--- a/docs/android/index.yml
+++ b/docs/android/index.yml
@@ -7,11 +7,11 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 670b27732bde526db4e28b1b9d5bcff8baff1afd
-  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
+  ms.openlocfilehash: 9e49042380794ea49489e9d92ea122a58fb76bc4
+  ms.sourcegitcommit: 46d3c9daa45350bdd536d9e105517f3c1c753c5b
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/26/2018
+  ms.lasthandoff: 05/07/2018
 abstract:
   description: Rozszerzenie Xamarin.Android uwidacznia kompletny zestaw Android SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje dla systemu Android przy użyciu języka C# lub F# w programie Visual Studio.
   menu:
@@ -74,6 +74,12 @@ sections:
         src: ~/media/icons/i_platform.svg
         href: ~/android/platform/
       title: Funkcje platformy
+    - href: ~/essentials/index.md?context=xamarin/android
+      html: Międzyplatformowe interfejsy API dla aplikacji mobilnych.
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_multi-connect.svg
+        href: ~/essentials/index.md?context=xamarin/android
+      title: Xamarin.Essentials
     - href: ~/android/data-cloud/
       html: Magazynowanie i pobieranie danych lokalnych i zdalnych oraz inne usługi chmurowe.
       image:
