--- a/docs/xamarin-forms/index.yml
+++ b/docs/xamarin-forms/index.yml
@@ -7,11 +7,11 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 20178c7ff96dbdd7353d92f454f3231ad89ba3eb
-  ms.sourcegitcommit: 1561c8022c3585655229a869d9ef3510bf83f00a
+  ms.openlocfilehash: 21325d312fe3b05e06a2cfad5c085273b4e5e890
+  ms.sourcegitcommit: daa089d41cfe1ed0456d6de2f8134cf96ae072b1
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/27/2018
+  ms.lasthandoff: 05/07/2018
 abstract:
   description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Kompiluj całkowicie natywne aplikacje dla systemów Android, iOS i platformy uniwersalnej systemu Windows przy użyciu języka C# w programie Visual Studio.
   menu:
@@ -82,6 +82,12 @@ sections:
         src: ~/media/icons/i_platform.svg
         href: ~/xamarin-forms/platform/
       title: Funkcje platformy
+    - href: ~/essentials/index.md?context=xamarin/xamarin-forms
+      html: Międzyplatformowe interfejsy API dla typowych zadań, takich jak uzyskiwanie dostępu do plików, uzyskiwanie informacji o urządzeniu, funkcje sprzętowe itp.
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_multi-connect.svg
+        href: ~/essentials/index.md?context=xamarin/xamarin-forms
+      title: Xamarin.Essentials
     - href: ~/xamarin-forms/data-cloud/
       html: Magazynowanie i pobieranie danych lokalnych i zdalnych oraz inne usługi chmurowe.
       image:
