--- a/docs/cross-platform/samples/index.yml
+++ b/docs/cross-platform/samples/index.yml
@@ -12,6 +12,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: pl-PL
   ms.lasthandoff: 04/04/2018
+  ms.locfileid: "30768431"
 abstract:
   description: Międzyplatformowe przykładowe aplikacje i pokazy kodu środowiska Xamarin pomagające w rozpoczęciu tworzenia aplikacji mobilnych w języku C# i środowisku Xamarin.
   menu:
