--- a/docs/mac/index.yml
+++ b/docs/mac/index.yml
@@ -12,6 +12,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: pl-PL
   ms.lasthandoff: 05/03/2018
+  ms.locfileid: "32436482"
 abstract:
   description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje w programie Visual Studio dla komputerów Mac.
   menu:
