--- a/docs/tools/index.yml
+++ b/docs/tools/index.yml
@@ -12,6 +12,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: pl-PL
   ms.lasthandoff: 05/04/2018
+  ms.locfileid: "33112475"
 abstract:
   description: Narzędzia ulepszające środowisko programowania Xamarin.
   menu:
